@@ -1,5 +1,7 @@
 git-annex (8.20210128) UNRELEASED; urgency=medium
 
+  * Commands can be added to git-annex, by installing a program in PATH
+    with a name starting with "git-annex-"
   * Fix a reversion that made import of a tree from a special remote
     result in a merge that deleted files that were not preferred content
     of that special remote.
